removed intellij warnings and update contact